--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
         <title>Hello World!</title>
 
-        <link rel="stylesheet" href="index.css" />
+        <link inline rel="stylesheet" href="./dist/index.css" />
     </head>
 
     <body>
         <h1>Hello World!</h1>
 
-        <script src="index.js"></script>
+        <script inline src="./dist/index.js"></script>
     </body>
 </html>
