--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     </head>
 
     <body>
-        <h1>Hello World!</h1>
+        <section class="equation">
+            <div class="container">
+                <div class="col-md-12">
+                    <p>.col-md-12</p>
+                </div>
+            </div>
+        </section>
 
         <script inline src="./dist/index.js"></script>
     </body>
