--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     </head>
 
     <body>
-        <section class="equation">
+        <section class="bag">
             <div class="container">
                 <div class="col-md-12">
-                    <p>.col-md-12</p>
+                    <figure></figure>
                 </div>
             </div>
         </section>
