--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="bag">
             <div class="container">
                 <div class="col-md-12">
-                    <figure></figure>
+                    <img src="img/bag.svg" class="img-responsive center-block" alt="">
                 </div>
             </div>
         </section>
