--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
-
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
         <title>Hello World!</title>
 
@@ -11,13 +11,11 @@
     </head>
 
     <body>
-        <section class="bag">
-            <div class="container">
-                <div class="col-md-12">
-                    <img src="img/bag.svg" class="img-responsive center-block" alt="">
-                </div>
+        <div class="container">
+            <div class="col-md-12">
+                <img src="img/bag.svg" class="img-responsive center-block" alt="">
             </div>
-        </section>
+        </div>
 
         <script inline src="./dist/index.js"></script>
     </body>
