--- a/index.html
+++ b/index.html
@@ -5,17 +5,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <title>Hello World!</title>
+        <title>bloodtype.coffee</title>
 
         <link inline rel="stylesheet" href="./dist/index.css" />
     </head>
 
     <body>
-        <div class="container">
-            <div class="col-md-12">
-                <img src="img/bag.svg" class="img-responsive center-block" alt="">
+        <section class="bloodbag">
+            <h1>Hi there!</h1>
+
+            <div class="container">
+                <div class="col-md-12">
+                    <img inline src="./svg/bloodbag.svg" />
+                </div>
             </div>
-        </div>
+        </section>
+
+        <section class="rocket">
+            <h1>I built eject.io</h1>
+
+            <div class="container">
+                <div class="col-md-12">
+                    <img inline src="./svg/rocket.svg" />
+                </div>
+            </div>
+        </section>
 
         <script inline src="./dist/index.js"></script>
     </body>
