--- a/index.html
+++ b/index.html
@@ -12,20 +12,30 @@
 
     <body>
         <section class="bloodbag">
-            <h1>Hi there!</h1>
-
             <div class="container">
                 <div class="col-md-12">
+                    <h1>Hi there!</h1>
+
                     <img inline src="./svg/bloodbag.svg" />
                 </div>
             </div>
         </section>
 
-        <section class="rocket">
-            <h1>I built eject.io</h1>
+        <section class="brain">
+            <div class="container">
+                <img inline src="./svg/brain.svg" />
 
+                <div class="col-md-12">
+                    <h1>I'm a designer, and a front&dash;end developer &ndash; and I love coffee!</h1>
+                </div>
+            </div>
+        </section>
+
+        <section class="rocket">
             <div class="container">
                 <div class="col-md-12">
+                    <h1>I built eject.io</h1>
+
                     <img inline src="./svg/rocket.svg" />
                 </div>
             </div>
