--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="bloodbag">
             <div class="container">
                 <div class="col-md-12">
-                    <h1>Hi there!</h1>
+                    <h1>I &lt;3 coffee</h1>
 
                     <img inline src="./svg/bloodbag.svg" />
                 </div>
@@ -23,10 +23,8 @@
 
         <section class="brain">
             <div class="container">
-                <img inline src="./svg/brain.svg" />
-
                 <div class="col-md-12">
-                    <h1>I'm a designer, and a front&dash;end developer &ndash; and I love coffee!</h1>
+                    <h1>I'm a designer, and a front&dash;end developer located in Denmark</h1>
                 </div>
             </div>
         </section>
