--- a/index.html
+++ b/index.html
@@ -13,28 +13,60 @@
     <body>
         <section class="bloodbag">
             <div class="container">
-                <div class="col-md-12">
-                    <h1>I &lt;3 coffee</h1>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>I &lt;3 coffee</h1>
 
-                    <img inline src="./svg/bloodbag.svg" />
+                        <img inline src="./svg/bloodbag.svg" />
+                    </div>
                 </div>
             </div>
         </section>
 
         <section class="brain">
             <div class="container">
-                <div class="col-md-12">
-                    <h1>I'm a designer, and a front&dash;end developer located in Denmark</h1>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>Also &ndash; I am a designer, and a front&dash;end developer, located in Denmark</h1>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section class="rocket">
             <div class="container">
-                <div class="col-md-12">
-                    <h1>I built eject.io</h1>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>I built eject.io</h1>
 
-                    <img inline src="./svg/rocket.svg" />
+                        <img inline src="./svg/rocket.svg" />
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>Because I wanted to learn Sketch. So I made a few mock-designs, and put them on there for free</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-1"></div>
+
+                    <div class="col-md-10">
+                        <h1>This site is&hellip;</h1>
+
+                        <p>An experiment in performance. All assets are uglyfied and injected directly into a single HTML file. Built on Bootstrap 4, as an experiment on how to decrease the size of a &ndash; somewhat &ndash; complex website. All assets are compiled into one single HTML file, minimizing HTTP header overhead and general filesize.</p>
+                    </div>
+
+                    <div class="col-md-1"></div>
                 </div>
             </div>
         </section>
