--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>I &lt;3 coffee</h1>
+                        <h1>Hi there! My name is Thomas and #%&amp;ing love coffee!</h1>
 
                         <img inline src="./svg/bloodbag.svg" />
                     </div>
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>Also &ndash; I am a designer, and a front&dash;end developer, located in Denmark</h1>
+                        <h1>Also; I am a designer, and a front&dash;end developer straight outta Copenhagen!</h1>
                     </div>
                 </div>
             </div>
@@ -37,7 +37,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>I built eject.io</h1>
+                        <h1>Some time ago I built <a href="http://eject.io">eject.io</a>, because needed a reason to learn <a href="http://bohemiancoding.com/sketch/">Sketch</a></h1>
 
                         <img inline src="./svg/rocket.svg" />
                     </div>
@@ -45,25 +45,23 @@
             </div>
         </section>
 
-        <section>
+        <section class="safari">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>Because I wanted to learn Sketch. So I made a few mock-designs, and put them on there for free</h1>
+                        <h1>This lead me to create a few device &amp; app design mock&dash;up's which I released for free on <a href="https://github.com/roosteronacid/sketch">Github</a></h1>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section>
+        <section class="grid">
             <div class="container">
                 <div class="row">
                     <div class="col-md-1"></div>
 
                     <div class="col-md-10">
-                        <h1>This site is&hellip;</h1>
-
-                        <p>An experiment in performance. All assets are uglyfied and injected directly into a single HTML file. Built on Bootstrap 4, as an experiment on how to decrease the size of a &ndash; somewhat &ndash; complex website. All assets are compiled into one single HTML file, minimizing HTTP header overhead and general filesize.</p>
+                        <h1>I love creating sweet <abbr title="code">code</abbr>, and this and that. And <abbr title="more of this">more of this</abbr>, and some more of that as well</h1>
                     </div>
 
                     <div class="col-md-1"></div>
