--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>Hi there! My name is Thomas and #%&amp;ing love coffee!</h1>
+                        <h1>Hi there!</h1>
+
+                        <h1>My name is Thomas and #%&amp;ing love coffee!</h1>
 
                         <img inline src="./svg/bloodbag.svg" />
                     </div>
@@ -27,7 +29,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>Also; I am a designer, and a front&dash;end developer straight outta Copenhagen!</h1>
+                        <h1>Also; I am a UI/UX designer and a full-stack developer, with a strong focus on RWD for the last seven years</h1>
                     </div>
                 </div>
             </div>
@@ -37,7 +39,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>Some time ago I built <a href="http://eject.io">eject.io</a>, because needed a reason to learn <a href="http://bohemiancoding.com/sketch/">Sketch</a></h1>
+                        <h1>Some time ago I built <a href="http://eject.io">eject.io</a> because I needed a reason to teach myself how to <a href="http://bohemiancoding.com/sketch/">Sketch</a></h1>
 
                         <img inline src="./svg/rocket.svg" />
                     </div>
@@ -49,7 +51,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>This lead me to create a few device &amp; app design mock&dash;up's which I released for free on <a href="https://github.com/roosteronacid/sketch">Github</a></h1>
+                        <h1>This lead me to create a few device &amp; app design mock&dash;ups, which I released for free on <a href="https://github.com/roosteronacid/sketch">Github</a></h1>
                     </div>
                 </div>
             </div>
@@ -61,7 +63,7 @@
                     <div class="col-md-1"></div>
 
                     <div class="col-md-10">
-                        <h1>I love creating sweet <abbr title="code">code</abbr>, and this and that. And <abbr title="more of this">more of this</abbr>, and some more of that as well</h1>
+                        <h1>I enjoy <abbr title="HACKING">exploring</abbr> how far you can push the <abbr title="HTML, CSS, JS">envelope</abbr> in browsers &ndash; which is very much expressed in the code on this site<kbd>&#10074;</kbd></h1>
                     </div>
 
                     <div class="col-md-1"></div>
