--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="col-md-12">
                         <h1>Hi there!</h1>
 
-                        <h1>My name is Thomas and #%&amp;ing love coffee!</h1>
+                        <h1>My name is Thomas, and #%&amp;ing love coffee!</h1>
 
                         <img inline src="./svg/bloodbag.svg" />
                     </div>
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>Also; I am a UI/UX designer and a full-stack developer, with a strong focus on RWD for the last seven years</h1>
+                        <h1>Also; I am a UI/UX designer and a full-stack developer, with a strong focus on RWD</h1>
                     </div>
                 </div>
             </div>
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>This lead me to create a few device &amp; app design mock&dash;ups, which I released for free on <a href="https://github.com/roosteronacid/sketch">Github</a></h1>
+                        <h1>This lead me to create a few device &amp; app design mockups, which I <a href="https://github.com/roosteronacid/sketch">released for free</a> on Github</h1>
                     </div>
                 </div>
             </div>
@@ -60,10 +60,26 @@
         <section class="grid">
             <div class="container">
                 <div class="row">
+                    <div class="col-md-12">
+                        <h1>I enjoy <abbr title="HACKING">exploring</abbr> how far you can push the <abbr title="HTML, CSS, JS">envelope</abbr> in modern day web design, which is very much expressed in the creation of this site<kbd>&#10074;</kbd></h1>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="stats">
+            <div class="container">
+                <div class="row">
                     <div class="col-md-1"></div>
 
                     <div class="col-md-10">
-                        <h1>I enjoy <abbr title="HACKING">exploring</abbr> how far you can push the <abbr title="HTML, CSS, JS">envelope</abbr> in browsers &ndash; which is very much expressed in the code on this site<kbd>&#10074;</kbd></h1>
+                        <h1>This site is&hellip;</h1>
+
+                        <p>50 kb (gzipped) in size &ndash; total. It consists of one single file without any external references. All assets are compiled into the source and in turn <a href="view-source:http://bloodtype.coffee">served with the HTML</a> in one single request.</p>
+
+                        <p>The site is built on top of Bootstrap 4, using Gulp, SCSS to eleviate headaches, and all graphical assets are SVG.</p>
+
+                        <p>Grab the src off <a href="https://github.com/roosteronacid/bloodtype.coffee">Github</a>, and take it for a spin if you'd like.<p>
                     </div>
 
                     <div class="col-md-1"></div>
