--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                     <div class="col-md-10">
                         <h1>This site is&hellip;</h1>
 
-                        <p>50 kb (gzipped) in size &ndash; total. It consists of one single file without any external references. All assets are compiled into the source and in turn <a href="view-source:http://bloodtype.coffee">served with the HTML</a> in one single request.</p>
+                        <p>13 kb (gzipped) in size &ndash; total. It consists of one single file without any external references. All assets are compiled into the source and in turn <a href="view-source:http://bloodtype.coffee">served with the HTML</a> in one single request.</p>
 
-                        <p>The site is built on top of Bootstrap 4, using Gulp, SCSS to eleviate headaches, and all graphical assets are SVG.</p>
+                        <p>Built on top of Bootstrap 4, using Gulp, SCSS to eleviate headaches, and all graphical assets are SVG.</p>
 
-                        <p>Grab the src off <a href="https://github.com/roosteronacid/bloodtype.coffee">Github</a>, and take it for a spin if you'd like.<p>
+                        <p>Available licence-free. Grab the the source off <a href="https://github.com/roosteronacid/bloodtype.coffee">Github</a>, and take it for a spin if you'd like.<p>
                     </div>
 
                     <div class="col-md-1"></div>
