--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="col-md-12">
                         <h1>Hi there!</h1>
 
-                        <h1>My name is Thomas, and #%&amp;ing love coffee!</h1>
+                        <h1>My name is Thomas, and I #%&amp;ing love coffee!</h1>
 
                         <img inline src="./svg/bloodbag.svg" />
                     </div>
